--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@
                   <div class="tab-pane fade active show" id="home" role="tabpanel" aria-labelledby="home-tab">
                      <div class="box d-flex">
                          <div class="item">
-                             <div class="img"><img src="img/shopping-cart-pd-1.png" alt=""></div>
+                             <div class="img"><img src="img/Dogecoin (DOGE).svg" alt=""></div>
                              <div class="text"><p>SushiSwap</p></div>
                          </div>
                          <div class="item">
-                             <div class="img"><img src="img/shopping-cart-pd-2.png" alt=""></div>
+                             <div class="img"><img src="img/binance-coin-seeklogo.com.svg" alt=""></div>
                              <div class="text"><p>Uniswap</p></div>
                          </div>
                          <div class="item">
-                            <div class="img"><img src="img/shopping-cart-pd-1.png" alt=""></div>
+                            <div class="img"><img src="img/tether-seeklogo.com.svg" alt=""></div>
                              <div class="text"><p>PancakeSwap</p></div>
                          </div>
                      </div>
@@ -119,7 +119,7 @@
                      
                      
                         <div class="item">
-                           <div class="img"><img src="img/shopping-cart-pd-1.png" alt=""></div>
+                           <div class="img"><img src="img/wrapped-bitcoin-wbtc.svg" alt=""></div>
                             <div class="text"><p>PancakeSwap</p></div>
                         </div>
                     </div>
@@ -146,7 +146,7 @@
                     <div class="item ">
 
                        <div class="item-one d-flex">
-                        <div class="img"><img src="img/shopping-cart-pd-1.png" alt=""></div>
+                        <div class="img"><img src="img/wrapped-bitcoin-wbtc.svg" alt=""></div>
                         <div class="text">
                             <h5>Arrakis Finance</h5>
                         <p>A token bridge built on Wormhole</p>
@@ -154,26 +154,7 @@
                        </div>
 
                        <div class="item-one d-flex">
-                        <div class="img"><img src="img/shopping-cart-pd-1.png" alt=""></div>
-                        <div class="text">
-                            <h5>Arrakis Finance</h5>
-                        <p>A token bridge built on Wormhole</p>
-                        </div>
-                       </div>
-
-                    </div>
-                    <div class="item ">
-
-                       <div class="item-one d-flex">
-                        <div class="img"><img src="img/shopping-cart-pd-1.png" alt=""></div>
-                        <div class="text">
-                            <h5>Arrakis Finance</h5>
-                        <p>A token bridge built on Wormhole</p>
-                        </div>
-                       </div>
-
-                       <div class="item-one d-flex">
-                        <div class="img"><img src="img/shopping-cart-pd-1.png" alt=""></div>
+                        <div class="img"><img src="img/tether-seeklogo.com.svg" alt=""></div>
                         <div class="text">
                             <h5>Arrakis Finance</h5>
                         <p>A token bridge built on Wormhole</p>
@@ -184,7 +165,7 @@
                     <div class="item ">
 
                        <div class="item-one d-flex">
-                        <div class="img"><img src="img/shopping-cart-pd-1.png" alt=""></div>
+                        <div class="img"><img src="img/ethereum.svg" alt=""></div>
                         <div class="text">
                             <h5>Arrakis Finance</h5>
                         <p>A token bridge built on Wormhole</p>
@@ -192,7 +173,26 @@
                        </div>
 
                        <div class="item-one d-flex">
-                        <div class="img"><img src="img/shopping-cart-pd-1.png" alt=""></div>
+                        <div class="img"><img src="img/Dogecoin (DOGE).svg" alt=""></div>
+                        <div class="text">
+                            <h5>Arrakis Finance</h5>
+                        <p>A token bridge built on Wormhole</p>
+                        </div>
+                       </div>
+
+                    </div>
+                    <div class="item ">
+
+                       <div class="item-one d-flex">
+                        <div class="img"><img src="img/binance-coin-seeklogo.com.svg" alt=""></div>
+                        <div class="text">
+                            <h5>Arrakis Finance</h5>
+                        <p>A token bridge built on Wormhole</p>
+                        </div>
+                       </div>
+
+                       <div class="item-one d-flex">
+                        <div class="img"><img src="img/bitcoin-btc-logo.svg" alt=""></div>
                         <div class="text">
                             <h5>Arrakis Finance</h5>
                         <p>A token bridge built on Wormhole</p>
@@ -218,7 +218,7 @@
                     <div class="item ">
 
                        <div class="item-one d-flex">
-                        <div class="img"><img src="img/shopping-cart-pd-1.png" alt=""></div>
+                        <div class="img"><img src="img/avalanche-avax-seeklogo.com.svg" alt=""></div>
                         <div class="text">
                             <h5>Arrakis Finance</h5>
                         <p>A token bridge built on Wormhole</p>
@@ -226,26 +226,7 @@
                        </div>
 
                        <div class="item-one d-flex">
-                        <div class="img"><img src="img/shopping-cart-pd-1.png" alt=""></div>
-                        <div class="text">
-                            <h5>Arrakis Finance</h5>
-                        <p>A token bridge built on Wormhole</p>
-                        </div>
-                       </div>
-
-                    </div>
-                    <div class="item ">
-
-                       <div class="item-one d-flex">
-                        <div class="img"><img src="img/shopping-cart-pd-1.png" alt=""></div>
-                        <div class="text">
-                            <h5>Arrakis Finance</h5>
-                        <p>A token bridge built on Wormhole</p>
-                        </div>
-                       </div>
-
-                       <div class="item-one d-flex">
-                        <div class="img"><img src="img/shopping-cart-pd-1.png" alt=""></div>
+                        <div class="img"><img src="img/binance-coin-seeklogo.com.svg" alt=""></div>
                         <div class="text">
                             <h5>Arrakis Finance</h5>
                         <p>A token bridge built on Wormhole</p>
@@ -256,7 +237,7 @@
                     <div class="item ">
 
                        <div class="item-one d-flex">
-                        <div class="img"><img src="img/shopping-cart-pd-1.png" alt=""></div>
+                        <div class="img"><img src="img/bitcoin-btc-logo.svg"></div>
                         <div class="text">
                             <h5>Arrakis Finance</h5>
                         <p>A token bridge built on Wormhole</p>
@@ -264,7 +245,26 @@
                        </div>
 
                        <div class="item-one d-flex">
-                        <div class="img"><img src="img/shopping-cart-pd-1.png" alt=""></div>
+                        <div class="img"><img src="img/Dogecoin (DOGE).svg" alt=""></div>
+                        <div class="text">
+                            <h5>Arrakis Finance</h5>
+                        <p>A token bridge built on Wormhole</p>
+                        </div>
+                       </div>
+
+                    </div>
+                    <div class="item ">
+
+                       <div class="item-one d-flex">
+                        <div class="img"><img src="img/tron.svg" alt=""></div>
+                        <div class="text">
+                            <h5>Arrakis Finance</h5>
+                        <p>A token bridge built on Wormhole</p>
+                        </div>
+                       </div>
+
+                       <div class="item-one d-flex">
+                        <div class="img"><img src="img/wrapped-bitcoin-wbtc.svg" alt=""></div>
                         <div class="text">
                             <h5>Arrakis Finance</h5>
                         <p>A token bridge built on Wormhole</p>
@@ -291,61 +291,62 @@
                 <div class="banner-slider1">
                     <div class="item ">
 
-                       <div class="item-one d-flex">
-                        <div class="img"><img src="img/shopping-cart-pd-1.png" alt=""></div>
-                        <div class="text">
-                            <h5>Arrakis Finance</h5>
-                        <p>A token bridge built on Wormhole</p>
+                        <div class="item-one d-flex">
+                         <div class="img"><img src="img/tron.svg" alt=""></div>
+                         <div class="text">
+                             <h5>Arrakis Finance</h5>
+                         <p>A token bridge built on Wormhole</p>
+                         </div>
                         </div>
-                       </div>
-
-                       <div class="item-one d-flex">
-                        <div class="img"><img src="img/shopping-cart-pd-1.png" alt=""></div>
-                        <div class="text">
-                            <h5>Arrakis Finance</h5>
-                        <p>A token bridge built on Wormhole</p>
+ 
+                        <div class="item-one d-flex">
+                         <div class="img"><img src="img/wrapped-bitcoin-wbtc.svg" alt=""></div>
+                         <div class="text">
+                             <h5>Arrakis Finance</h5>
+                         <p>A token bridge built on Wormhole</p>
+                         </div>
                         </div>
-                       </div>
+ 
+                     </div>
 
-                    </div>
-                    <div class="item ">
+                     <div class="item ">
 
-                       <div class="item-one d-flex">
-                        <div class="img"><img src="img/shopping-cart-pd-1.png" alt=""></div>
-                        <div class="text">
-                            <h5>Arrakis Finance</h5>
-                        <p>A token bridge built on Wormhole</p>
+                        <div class="item-one d-flex">
+                         <div class="img"><img src="img/avalanche-avax-seeklogo.com.svg" alt=""></div>
+                         <div class="text">
+                             <h5>Arrakis Finance</h5>
+                         <p>A token bridge built on Wormhole</p>
+                         </div>
                         </div>
-                       </div>
-
-                       <div class="item-one d-flex">
-                        <div class="img"><img src="img/shopping-cart-pd-1.png" alt=""></div>
-                        <div class="text">
-                            <h5>Arrakis Finance</h5>
-                        <p>A token bridge built on Wormhole</p>
+ 
+                        <div class="item-one d-flex">
+                         <div class="img"><img src="img/binance-coin-seeklogo.com.svg" alt=""></div>
+                         <div class="text">
+                             <h5>Arrakis Finance</h5>
+                         <p>A token bridge built on Wormhole</p>
+                         </div>
                         </div>
-                       </div>
-
-                    </div>
-                    <div class="item ">
-
-                       <div class="item-one d-flex">
-                        <div class="img"><img src="img/shopping-cart-pd-1.png" alt=""></div>
-                        <div class="text">
-                            <h5>Arrakis Finance</h5>
-                        <p>A token bridge built on Wormhole</p>
+ 
+                     </div>
+                     <div class="item ">
+ 
+                        <div class="item-one d-flex">
+                         <div class="img"><img src="img/bitcoin-btc-logo.svg"></div>
+                         <div class="text">
+                             <h5>Arrakis Finance</h5>
+                         <p>A token bridge built on Wormhole</p>
+                         </div>
                         </div>
-                       </div>
-
-                       <div class="item-one d-flex">
-                        <div class="img"><img src="img/shopping-cart-pd-1.png" alt=""></div>
-                        <div class="text">
-                            <h5>Arrakis Finance</h5>
-                        <p>A token bridge built on Wormhole</p>
+ 
+                        <div class="item-one d-flex">
+                         <div class="img"><img src="img/Dogecoin (DOGE).svg" alt=""></div>
+                         <div class="text">
+                             <h5>Arrakis Finance</h5>
+                         <p>A token bridge built on Wormhole</p>
+                         </div>
                         </div>
-                       </div>
-
-                    </div>
+ 
+                     </div>
                 </div>
             </div>
         </div>
