--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                               <li><a href="#">Bridge</a></li>
                               <li><a href="#">Exchange</a></li>
                               <li><a href="#">tools</a></li>
-                              <li><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                              <!-- <li><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">
                                 <i class='bx bxs-down-arrow-alt'></i>
                              
-                              </a></li>
+                              </a></li> -->
                           </ul>
                       </div>
              
