--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </ul>
                 <div class="tab-content" id="myTabContent">
                   <div class="tab-pane fade active show" id="home" role="tabpanel" aria-labelledby="home-tab">
-                     <div class="box d-flex">
+                     <div class="box d-flex banner-slider2">
                          <div class="item">
                              <div class="img"><img src="img/Dogecoin (DOGE).svg" alt=""></div>
                              <div class="text"><p>SushiSwap</p></div>
@@ -108,7 +108,15 @@
                              <div class="text"><p>Uniswap</p></div>
                          </div>
                          <div class="item">
+                            <div class="img"><img src="img/wrapped-bitcoin-wbtc.svg" alt=""></div>
+                             <div class="text"><p>PancakeSwap</p></div>
+                         </div>
+                         <div class="item">
                             <div class="img"><img src="img/tether-seeklogo.com.svg" alt=""></div>
+                             <div class="text"><p>PancakeSwap</p></div>
+                         </div>
+                         <div class="item">
+                            <div class="img"><img src="img/tron.svg" alt=""></div>
                              <div class="text"><p>PancakeSwap</p></div>
                          </div>
                      </div>
